<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="login_guest">Not an Alumni? Back to Home</string>
    <string name="action_find_alumni">Find Alumni</string>
    <string name="action_login">Login</string>
    <string name="apps">Cyan Alumni</string>
    <string name="title_bb_ouralumni">Our Alumni</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_bb_news">News</string>
    <string name="title_bb_find_alumni">Find Alumni</string>
    <string name="bg">#0097a7</string>
    <string name="search_hint">Find alumni</string>
    <string name="find_alumni_btn">Find Alumni</string>
    <string name="job_vacancy_title">Job Vacancy</string>
    <string name="internship_title">Internship</string>
    <string name="project_title">Project</string>
    <string name="find_job_vacancy_btn">Find job vacancy</string>
    <string name="find_internship_btn">Find internship progam</string>
    <string name="detail_button">Detail</string>
    <string name="full_name">hint_sign_name</string>
    <string name="hint_sign_name">Full Name</string>
    <string name="hint_graduated_year">Graduated Year</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_company">Company</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="btn_update">UPDATE</string>
    <string name="sign_profile_activity">Sign Profile</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="expand_alumni_profile">Alumni Profile</string>
    <string name="alumni_name">Alumni Name</string>
    <string name="alumni_year">Alumni Year</string>
    <string name="alumni_occupation">Alumni Occupation</string>
    <string name="alumni_company">Alumni Company</string>
    <string name="alumni_address">Alumni Address</string>
    <string name="alumni_city">Alumni City</string>
    <string name="alumni_post">Alumni Post</string>
    <string name="alumni_contact">Alumni Contact</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="there_are_no_post_yet">There are no post yet.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="btn_post">post</string>
</resources>
